# advanced-deep-learning

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
01_exercise/: load_data.py
exercise_01/: __init__.py  load_data.py  models.py  notes.md  plot_residuals.py  run_training.py
exercise_01/runs/Mar26_16-40-08_Philipps-MacBook-Pro.local/: events.out.tfevents.1743003608.Philipps-MacBook-Pro.local.99858.0
exercise_01/runs/Mar26_16-41-43_Philipps-MacBook-Pro.local/: events.out.tfevents.1743003703.Philipps-MacBook-Pro.local.113.0
exercise_01/training_stuff/: label_scaler.pickle  training_metrics.pickle
exercise_01/training_stuff_conv/: best_model.pth  training_metrics.pickle
exercise_01/training_stuff_conv_dev/: best_model.pth  label_scaler.pickle  training_metrics.pickle
exercise_02/: plot_residuals.py  run_training.py  uncert_pred_loss.py
exercise_02/training_stuff_conv_dev/: best_model.pth  training_metrics.pickle
exercise_03/: B03train_normalizing_flow_template.py  B03train_solution_normalizing_flow.py  deconstruct_pdf_step_by_step.py  overview.md  plot_residuals.py
exercise_03/models/: nf_model.py
exercise_03/plots/: global_iter_00000.npz  global_iter_00100.npz  global_iter_00200.npz  global_iter_00300.npz
exercise_03/training_stuff_nf_dev/: training_metrics.pickle
exercise_04/: data_utils.py  models.py  plot_residuals.py  show_data.py  train_gnn.py  train_gnn_template.py
exercise_05/: .gitignore  GAN_solution.py  GAN_template.py  make_animations.sh  models.py
exercise_06/: A05MNIST_diffusion_template.py
exercise_07/: A03simple_example_template.py
exercise_08/: train_graph_transformer.py  utils.py
scripts/: dowload_galah4.py
training_util/: training_loop.py
util/: __init__.py  training_loop.py  utils.py
(+455 files in other folders)
