[project]
name = "advanced-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.29.3",
    "jammy-flows @ git+https://github.com/thoglu/jammy_flows.git",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tensorvision>=0.1.dev2",
    "torch>=2.6.0",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
]
