[project]
name = "advanced-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "astropy>=7.0.1",
    "awkward>=2.8.1",
    "denoising-diffusion-pytorch>=2.1.1",
    "healpy>=1.18.1",
    "huggingface-hub>=0.29.3",
    "jammy-flows @ git+https://github.com/thoglu/jammy_flows.git",
    "matplotlib>=3.10.1",
    "meander>=0.0.3",
    "mhealpy>=0.3.4",
    "numpy>=2.2.4",
    "pyarrow>=19.0.1",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tensorvision>=0.1.dev2",
    "torch==2.5.1",
    "torch-geometric>=2.6.1",
    "torchdiffeq>=0.2.5",
    "torchsummary>=1.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]
